# image-vuln-scanner

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ruff.yml  trufflehog-scan.yml
image_vuln_scanner/: cli.py  service.py
image_vuln_scanner/k8s/: client.py  extractor.py
image_vuln_scanner/report/: generator.py
image_vuln_scanner/scanners/: base.py  grype.py  trivy.py
